--- a/package.json
+++ b/package.json
@@ -3,24 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "styled-components": "^4.3.2",
     "axios": "^0.19.0",
     "history": "^4.9.0",
+    "polished": "^3.4.1",
     "prop-types": "^15.7.2",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-icons": "^3.7.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
-    "redux-saga": "^1.0.5"
+    "redux-saga": "^1.0.5",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "babel-plugin-root-import": "^6.2.0",
     "customize-cra": "^0.2.14",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
@@ -33,10 +37,7 @@
     "react-app-rewired": "^2.1.3",
     "reactotron-react-js": "^3.3.2",
     "reactotron-redux": "^3.1.1",
-    "reactotron-redux-saga": "^4.2.2",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.3.5"
+    "reactotron-redux-saga": "^4.2.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
