--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.17.0",
     "babel-eslint": "^10.0.3",
-    "babel-plugin-root-import": "^6.2.0",
+    "babel-plugin-root-import": "^6.4.1",
+    "babel-preset-env": "^1.7.0",
     "customize-cra": "^0.2.14",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -36,7 +38,8 @@
     "react-app-rewired": "^2.1.3",
     "reactotron-react-js": "^3.3.2",
     "reactotron-redux": "^3.1.1",
-    "reactotron-redux-saga": "^4.2.2"
+    "reactotron-redux-saga": "^4.2.2",
+    "redux-mock-store": "^1.5.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
