--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [10.x]
 
     steps:
       - uses: actions/checkout@v1
@@ -19,6 +19,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Execute build and tests
         run: |
+          npm install
           npm run build
           npm run test
       - name: Discord notification
