--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test --watchAll --bail",
+    "test": "react-app-rewired test -- --forceExit",
     "eject": "react-scripts eject"
   },
   "jest": {
